[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[project]
name = "brain-games"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "prompt>=0.4.1",
]
[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
[tool.ruff]
line-length = 80

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint]
preview = true
select = ["E", "F", "I", "C90"]
